# comcom

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: cli.rs  config.rs  detection.rs  display.rs  export.rs  history.rs  main.rs  watch.rs
