[package]
name = "com-com"
version = "0.1.1"
edition = "2021"
description = "Smart Arduino/microcontroller COM port manager with real-time monitoring, nicknames, and history"
license = "MIT"
repository = "https://github.com/yantra-commons/comcom"
homepage = "https://github.com/yantra-commons/comcom"
readme = "README.md"
keywords = ["arduino", "serial", "com-port", "cli", "microcontroller"]
categories = ["command-line-utilities", "hardware-support"]

[[bin]]
name = "com-com"
path = "src/main.rs"

[dependencies]
serialport    = "4.2"
tokio         = { version = "1.0", features = ["full"] }
chrono        = { version = "0.4", features = ["serde"] }
clap          = { version = "4.4", features = ["derive"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
colored       = "2.0"
tabled        = "0.14"
dirs          = "5.0"
anyhow        = "1.0"
csv           = "1.3"
arboard       = "3"
uuid          = { version = "1", features = ["v4"] }
